fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,9 @@ body {
 #download-cv {
   position: static;
   width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
   max-width: 120px;
   margin: 4px auto;
   display: block;
